-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 17, 20
-
Component/s: hotspot
-
b17
-
aarch64
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8309062 | 17.0.8 | Aleksey Shipilev | P4 | Resolved | Fixed | b05 |
In SharedRuntime::generate_deopt_blob, there is following assertion code:
2279 #ifdef ASSERT0
2280 { Label L;
2281 __ ldr(rscratch1, Address(rthread,
2282 JavaThread::last_Java_fp_offset()));
2283 __ cbz(rscratch1, L);
2284 __ stop("SharedRuntime::generate_deopt_blob: last_Java_fp not cleared");
2285 __ bind(L);
2286 }
2287 #endif // ASSERT
We check macro 'ASSERT0' at line 2279, which is wrong.
The correct macro name here should be 'ASSERT'.
2279 #ifdef ASSERT0
2280 { Label L;
2281 __ ldr(rscratch1, Address(rthread,
2282 JavaThread::last_Java_fp_offset()));
2283 __ cbz(rscratch1, L);
2284 __ stop("SharedRuntime::generate_deopt_blob: last_Java_fp not cleared");
2285 __ bind(L);
2286 }
2287 #endif // ASSERT
We check macro 'ASSERT0' at line 2279, which is wrong.
The correct macro name here should be 'ASSERT'.
- backported by
-
JDK-8309062 AArch64: Wrong macro check in SharedRuntime::generate_deopt_blob
-
- Resolved
-