8294183: AArch64: Wrong macro check in SharedRuntime::generate_deopt_blob