src/hotspot/cpu/aarch64/sharedRuntime_aarch64.cpp
@@ -2276,7 +2276,7 @@ void SharedRuntime::generate_deopt_blob() {
 
   Label retaddr;
   __ set_last_Java_frame(sp, noreg, retaddr, rscratch1);
-#ifdef ASSERT0
+#ifdef ASSERT
   { Label L;
     __ ldr(rscratch1, Address(rthread,
                               JavaThread::last_Java_fp_offset()));
